--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,23 +10,25 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}"/>
+		<link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
 	</head>
 	
 	
 	<body>
-		<div class="container-fluid h-100">
+		<div class="container-fluid h-100 ">
 			<div class="row justify-content-center h-100">		
 				<div class="col-md-8 col-xl-6 chat">
 					<div class="card">
 						<div class="card-header msg_head">
 							<div class="d-flex bd-highlight">
 								<div class="img_cont">
-									<img src="" class="rounded-circle user_img">
+									<!-- <img src="https://ibb.co/5FGJ7qm" alt="crdblogo" class="rounded-circle user_img"> -->
+									<img src="https://i.ibb.co/YZPVrvm/crdblogo.png" alt="crdblogo" class="rounded-circle user_img">
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
 									<span>CRDB ChatBot</span>
-									<p>Welcome to chat with me anything!</p>
+									<p>Welcome To Launching Event!</p>
 								</div>
 							</div>
 						</div>
@@ -56,7 +58,9 @@
 					const str_time = hour+":"+minute;
 					var rawText = $("#text").val();
 
-					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="" class="rounded-circle user_img_msg"></div></div>';
+					
+
+					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
 					
 					$("#text").val("");
 					$("#messageFormeight").append(userHtml);
@@ -68,9 +72,10 @@
 						type: "POST",
 						url: "/get",
 					}).done(function(data) {
-						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
+						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://i.ibb.co/T85PNyk/Chatbot-Chat-Message.jpg" id="myimg" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
 						$("#messageFormeight").append($.parseHTML(botHtml));
 					});
+					$('html,body').animate({scrollTop: document.body.scrollHeight},"fast");
 					event.preventDefault();
 				});
 			});
@@ -78,3 +83,6 @@
         
     </body>
 </html>
+
+
+<!-- <img src="https://i.ibb.co/T85PNyk/Chatbot-Chat-Message.jpg" alt="Chatbot-Chat-Message" border="0"> -->
