--- a/static/style.css
+++ b/static/style.css
@@ -1,286 +1,483 @@
-body,html{
-	height: 100%;
-	margin: 0;
-	background-image: linear-gradient(
-		rgba(1, 2, 67, 0.915),
-		rgba(3, 0, 37, 0.932)
-	  ),
-	  url("https://i.ibb.co/YZPVrvm/crdblogo.png");
-	  background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-	  font-family: 'Rubik';
-	
 
-	  width: 100%;
-}
 
-.chat{
-	margin-top: auto;
-	margin-bottom: auto;
-}
-
-.card{
-	width: 100%;
-	height: 500px;
-	border-radius: 15px !important;
-	background-color: rgba(0, 0, 0, 0.077) !important;
-	backdrop-filter: blur(9px);
-	border: 2px solid rgba(255, 255, 255, 0.047);
-}
-
-.contacts_body{
-	padding:  0.75rem 0 !important;
-	overflow: scroll;
-	white-space: nowrap;
-}
-.msg_card_body{
-	overflow: scroll;
-}
-.card-header{
-	border-radius: 15px 15px 0 0 !important;
-	border-bottom: 0 !important;
-}
-.card-footer{
-border-radius: 0 0 15px 15px !important;
-	border-top: 0 !important;
-}
-.container{
-	align-content: center;
-}
-.search{
-	border-radius: 15px 0 0 15px !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color:white !important;
-}
-.search:focus{
-	 box-shadow:none !important;
-   outline:0px !important;
-}
-.type_msg{
-	background-color: rgba(0, 0, 0, 0.196) !important;
-	border:0 !important;
-	border-radius: 21px;;
-	color:white !important;
-	height: 40px !important;
-	overflow-y: auto;
-	padding-left: 12px;
-	padding-right: 12px;
-	border: 1px solid rgba(255, 255, 255, 0.068) !important;
-}
-	.type_msg:focus{
-	 box-shadow:none !important;
-   outline:0px !important;
-}
-.attach_btn{
-	border-radius: 15px 0 0 15px !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-.send_btn{
-	border-radius: 0 15px 15px 0 !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-
-/* #myimg{
-	width: 30px;
-	height: 30px;
-	border-radius: 50%;
-} */
-.search_btn{
-	border-radius: 0 15px 15px 0 !important;
-	background-color: rgba(0, 0, 0, 0.125) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-.contacts{
-	list-style: none;
-	padding: 0;
-}
-.contacts li{
-	width: 100% !important;
-	padding: 5px 10px;
-	margin-bottom: 15px !important;
-}
-.active{
-	background-color: rgba(0,0,0,0.3);
-}
-.user_img{
-	height: 70px;
-	width: 70px;
-	border:1.5px solid #f5f6fa;
-
-}
-.user_img_msg{
-	height: 40px;
-	width: 40px;
-	border:1.5px solid #f5f6fa;
-
-}
-.img_cont{
-	position: relative;
-	height: 70px;
-	width: 70px;
-}
-.img_cont_msg{
-	height: 35px;
-	width: 35px;
-}
-.online_icon{
-	position: absolute;
-	height: 15px;
-	width:15px;
-	background-color: #4cd137;
-	border-radius: 50%;
-	bottom: 0.2em;
-	right: 0.4em;
-	border:1.5px solid white;
-}
-.offline{
-	background-color: #c23616 !important;
-}
-.user_info{
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-left: 15px;
-}
-.user_info span{
-	font-size: 20px;
-	color: white;
-}
-.user_info p{
-	font-size: 10px;
-	color: rgba(255,255,255,0.6);
-}
-.video_cam{
-	margin-left: 50px;
-	margin-top: 5px;
-}
-.video_cam span{
-	color: white;
-	font-size: 20px;
-	cursor: pointer;
-	margin-right: 20px;
-}
-.msg_cotainer{
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-left: 10px;
-	border-radius: 25px;
-	background-color: rgba(82, 171, 255, 0.09);
-	padding: 10px;
-	position: relative;
-	color: rgb(252, 253, 255);
-	font-size: 0.8em;
-}
-.msg_cotainer_send{
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-right: 10px;
-	border-radius: 25px;
-	background-color: #58cc7119;
-	padding: 10px;
-	position: relative;
-	color: rgb(55, 255, 0);
-	font-size: 0.8em;
-}
-.msg_time{
-	position: absolute;
-	left: 0;
-	bottom: -15px;
-	color: rgba(255,255,255,0.5);
-	font-size: 10px;
-}
-.msg_time_send{
-	position: absolute;
-	right:0;
-	bottom: -15px;
-	color: rgba(255,255,255,0.5);
-	font-size: 10px;
-}
-.msg_head{
-	position: relative;
-}
-#action_menu_btn{
-	position: absolute;
-	right: 10px;
-	top: 10px;
-	color: white;
-	cursor: pointer;
-	font-size: 20px;
-}
-.action_menu{
-	z-index: 1;
-	position: absolute;
-	padding: 15px 0;
-	background-color: rgba(0,0,0,0.5);
-	color: white;
-	border-radius: 15px;
-	top: 30px;
-	right: 15px;
-	display: none;
-}
-.action_menu ul{
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-.action_menu ul li{
-	width: 100%;
-	padding: 10px 15px;
-	margin-bottom: 5px;
-}
-.action_menu ul li i{
-	padding-right: 10px;
-}
-.action_menu ul li:hover{
-	cursor: pointer;
-	background-color: rgba(0,0,0,0.2);
-}
-@media screen and (max-width: 640px) {
-	.contacts_card{
-	margin-bottom: 15px !important;
-}
-
-.card{
-	position: absolute;
-	width: 100%;
+.App {
+	text-align: center;
+  }
+  
+  .App-logo {
+	height: 40vmin;
+	pointer-events: none;
+  }
+  
+  @media (prefers-reduced-motion: no-preference) {
+	.App-logo {
+	  animation: App-logo-spin infinite 20s linear;
+	}
+  }
+  
+  .App-header {
+	background-color: #282c34;
 	min-height: 100vh;
-}
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
+  }
+  
+  .App-link {
+	color: #61dafb;
+  }
+  
+  @keyframes App-logo-spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(360deg);
+	}
+  }
+  
+  
+  .body{
+	min-height: 115vh;
+	  margin: 0;
+	  background-image: linear-gradient(
+		  rgba(1, 2, 67, 0.915),
+		  rgba(3, 0, 37, 0.932)
+		),
+		url("https://i.ibb.co/YZPVrvm/crdblogo.png");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+		font-family: 'Rubik';
+	 
+		/* width: 100%; */
+  }
+  
+  
+  .img_cont img{
+	width: 65px;
+	height: 66px;
+	border-radius: 50%;
+	border: 2px solid rgba(255, 255, 255, 0.163);
+  }
+  
+  .one,
+  .two{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* background-color: wheat; */
+  }
+  
+  .cards{
+	  width: 70%;
+	  height: 500px;
+	  border-radius: 15px !important;
+	  background-color: rgba(0, 0, 0, 0.077) !important;
+	  backdrop-filter: blur(9px);
+	  border: 2px solid rgba(255, 255, 255, 0.047);
+	display: flex;
+	/* justify-content: space-between; */
+	flex-direction: column;
+	padding-left: 9px;
+	padding-top: 12px;
+  }
+  
+  .contacts_body{
+	  padding:  0.75rem 0 !important;
+	  overflow: scroll;
+	  white-space: nowrap;
+  }
   .msg_card_body{
-    width: 100%;
-	min-height: 100vh;
-}
-}
-
-
-
-.contacts_body {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+	  overflow: scroll;
+  
   }
-
-  .contacts_body::-webkit-scrollbar {
-    display: none;
+  .card-header{
+	  border-radius: 15px 15px 0 0 !important;
+	  border-bottom: 0 !important;
   }
-
-  .msg_card_body {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  .card-footer{
+	width: 100%;
+  border-radius: 0 0 15px 15px !important;
+	  border-top: 0 !important;
   }
-
-  .msg_card_body::-webkit-scrollbar {
-    display: none;
+  .container{
+	  align-content: center;
   }
-
-  input::placeholder{
-	font-size: 0.8em;
+  .search{
+	width: 100%;
+	  border-radius: 15px 0 0 15px !important;
+	  background-color: rgba(0,0,0,0.3) !important;
+	  border:0 !important;
+	  color:white !important;
   }
+  .search:focus{
+	   box-shadow:none !important;
+	 outline:0px !important;
+  }
+  .type_msg{
+	  background-color: rgba(255, 255, 255, 0.062) !important;
+	  border:0 !important;
+	  border-radius: 8px;;
+	  color:white !important;
+	  height: 40px !important;
+	  overflow-y: auto;
+	  padding-left: 12px;
+	  padding-right: 12px;
+	  border: 1px solid rgba(255, 255, 255, 0.068) !important;
+  }
+	  .type_msg:focus{
+	   box-shadow:none !important;
+	 outline:0px !important;
+  }
+  .attach_btn{
+	  border-radius: 15px 0 0 15px !important;
+	  background-color: rgba(0,0,0,0.3) !important;
+	  border:0 !important;
+	  color: white !important;
+	  cursor: pointer;
+  }
+  .send_btn{
+	  border-radius: 0 15px 15px 0 !important;
+	  background-color: rgba(0,0,0,0.3) !important;
+	  border:0 !important;
+	  color: white !important;
+	  cursor: pointer;
+  }
+  
+  /* #myimg{
+	  width: 30px;
+	  height: 30px;
+	  border-radius: 50%;
+  } */
+  .search_btn{
+	  border-radius: 0 15px 15px 0 !important;
+	  background-color: rgba(0, 0, 0, 0.125) !important;
+	  border:0 !important;
+	  color: white !important;
+	  cursor: pointer;
+  }
+  .contacts{
+	  list-style: none;
+	  padding: 0;
+  }
+  .contacts li{
+	  width: 100% !important;
+	  padding: 5px 10px;
+	  margin-bottom: 15px !important;
+  }
+  .active{
+	  background-color: rgba(0,0,0,0.3);
+  }
+  .user_img{
+	  height: 70px;
+	  width: 70px;
+	  border:1.5px solid #f5f6fa;
+  
+  }
+  .user_img_msg{
+	  height: 40px;
+	  width: 40px;
+	  border:1.5px solid #f5f6fa;
+  
+  }
+  .img_cont{
+	  position: relative;
+	  height: 70px;
+	  width: 70px;
+  }
+  .img_cont_msg{
+	  height: 35px;
+	  width: 35px;
+  }
+  .online_icon{
+	  position: absolute;
+	  height: 15px;
+	  width:15px;
+	  background-color: #4cd137;
+	  border-radius: 50%;
+	  bottom: 0.2em;
+	  right: 0.4em;
+	  border:1.5px solid white;
+  }
+  .offline{
+	  background-color: #c23616 !important;
+  }
+  .user_info{
+	  margin-top: auto;
+	  margin-bottom: auto;
+	  margin-left: 15px;
+  }
+  .user_info span{
+	  font-size: 20px;
+	  color: white;
+  }
+  .user_info p{
+	  font-size: 10px;
+	  color: rgba(255,255,255,0.6);
+  }
+  .video_cam{
+	  margin-left: 50px;
+	  margin-top: 5px;
+  }
+  .video_cam span{
+	  color: white;
+	  font-size: 20px;
+	  cursor: pointer;
+	  margin-right: 20px;
+  }
+  .msg_cotainer{
+	  margin-top: auto;
+	  margin-bottom: auto;
+	  margin-left: 10px;
+	  border-radius: 25px;
+	  background-color: rgba(82, 171, 255, 0.09);
+	  padding: 10px;
+	  position: relative;
+	  color: rgb(252, 253, 255);
+	  font-size: 0.8em;
+  }
+  .msg_cotainer_send{
+	  margin-top: auto;
+	  margin-bottom: auto;
+	  margin-right: 10px;
+	  border-radius: 25px;
+	  background-color: #58cc7119;
+	  padding: 10px;
+	  position: relative;
+	  color: rgb(55, 255, 0);
+	  font-size: 0.8em;
+  }
+  .msg_time{
+	  position: absolute;
+	  left: 0;
+	  bottom: -15px;
+	  color: rgba(255,255,255,0.5);
+	  font-size: 10px;
+  }
+  .msg_time_send{
+	  position: absolute;
+	  right:0;
+	  bottom: -15px;
+	  color: rgba(255,255,255,0.5);
+	  font-size: 10px;
+  }
+  .msg_head{
+	  position: relative;
+  }
+  #action_menu_btn{
+	  position: absolute;
+	  right: 10px;
+	  top: 10px;
+	  color: white;
+	  cursor: pointer;
+	  font-size: 20px;
+  }
+  .action_menu{
+	  z-index: 1;
+	  position: absolute;
+	  padding: 15px 0;
+	  background-color: rgba(0,0,0,0.5);
+	  color: white;
+	  border-radius: 15px;
+	  top: 30px;
+	  right: 15px;
+	  display: none;
+  }
+  .action_menu ul{
+	  list-style: none;
+	  padding: 0;
+	  margin: 0;
+  }
+  .action_menu ul li{
+	  width: 100%;
+	  padding: 10px 15px;
+	  margin-bottom: 5px;
+  }
+  .action_menu ul li i{
+	  padding-right: 10px;
+  }
+  .action_menu ul li:hover{
+	  cursor: pointer;
+	  background-color: rgba(0,0,0,0.2);
+  }
+  
+  
+  
+  .contacts_body {
+	  -ms-overflow-style: none;
+	  scrollbar-width: none;
+	}
+  
+	.contacts_body::-webkit-scrollbar {
+	  display: none;
+	}
+  
+	.msg_card_body {
+	  -ms-overflow-style: none;
+	  scrollbar-width: none;
+	}
+  
+	.msg_card_body::-webkit-scrollbar {
+	  display: none;
+	}
+  
+	input::placeholder{
+	  font-size: 0.8em;
+	}
+  
+	.three{
+  width: 100%;
+  padding: 0;
+  /* background-color: rgba(0, 6, 96, 0.147); */
+	}
+  
+	.four{
+	  display: flex;
+  
+  
+	}
+  
+	.below{
+	  width: 90%;
+	}
+  
+	form{
+	  width: 100%;
+	}
+  
+	input{
+	  width: 100%;
+	}
+  
+	#messageArea{
+	  position: relative;
+	  /* background: white; */
+	  display: flex;
+	  align-items: center;
+	  margin-bottom: 24px;
+	  margin-left: 5px;
+	  justify-content: center;
+	  margin-left: 43px;
+	 
+  
+	}
+  
+	.mybuton{
+	  position: absolute;
+	  background-color: rgba(0, 0, 0, 0.238);
+	  width: 35px;
+	  height: 35px;
+	  border-radius: 9px;
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+	  right: 5px;
+	}
+  
+	#messageFormeight{
+	  /* background-color: wheat; */
+	  width: 96%;
+	  min-height: 43vh;
+	  position: relative;
+	  margin-left: 12px;
+	  margin-top: 23px;
+  
+	}
+	.below{
+	  position:absolute;
+	  bottom: 6px;
+	}
+  
+  
+	@media screen and (max-width: 940px) {
+	  .contacts_card{
+	  margin-bottom: 15px !important;
+	}
+
+	.card{
+	  position: absolute;
+	  width: 100%;
+	  min-height: 100vh;
+	}
+	
+	  .msg_card_body{
+		width: 100%;
+		overflow-y: none;
+	  /* min-height: 100vh; */
+	  
+	}
+	
+	
+	input::placeholder{
+	  font-size: 0.8em;
+	  }
+	
+	  .three{
+	/* width: 100%; */
+	/* padding: 23px; */
+	/* background-color: rgba(0, 6, 96, 0.147); */
+	  }
+	
+	  .four{
+		display: flex;
+	
+	
+	  }
+	
+	  .below{
+		width: 100%;
+	  }
+	
+	  form{
+		width: 100%;
+	  }
+	
+	  input{
+		width: 80%;
+	  }
+	
+	  .cards{
+		width: 90%;
+		height: 100vh;
+		position: relative;
+		top: 34px;
+	
+	  }
+	
+	  .below{
+		position:absolute;
+		bottom: 6px;
+	  }
+	  #messageArea{
+		position: relative;
+		width:94%;
+		/* background: white; */
+		display: flex;
+		align-items: center;
+		margin-bottom: 4px;
+		margin-left: 0px;
+	
+	  }
+	  input{
+		width: 100%;
+	  }
+  
+	  #messageFormeight{
+		/* background-color: wheat; */
+		width: 96%;
+		min-height: 43vh;
+		position: relative;
+		/* margin-left: -12px; */
+		margin-top: 23px;
+	
+	  }
+	}
+	
+  
+  
